# shipping-data-product-week7

./: .gitignore  README.md  TASK_5_PIPELINE_ORCHESTRATION_COMPLETED.md  docker-compose.yml  pyproject.toml  requirements.txt  telegram_scraper_README.md
.telemetry/: id.yaml
api/: API_README.md  crud.py  database.py  main.py  models.py  schemas.py
dagster_pipeline/: README.md  __init__.py
dagster_pipeline/assets/: dbt_assets.py  fastapi_assets.py  telegram_data_assets.py  yolo_assets.py
dagster_pipeline/jobs/: __init__.py
dagster_pipeline/resources/: __init__.py
dagster_pipeline/schedules/: __init__.py
history/: runs.db
history/runs/: index.db
notebooks/: anon.session  telegram_scraper.ipynb
schedules/: schedules.db
scripts/: check_detections.py  check_null_message_ids.py  load_raw_messages.py  start_api.py  start_dagster.py  test_api.py  test_endpoints.py  yolo_object_detection.py
telegram_analytics/: dbt_project.yml
telegram_analytics/models/marts/: dim_channels.sql  dim_dates.sql  dim_objects.sql  fct_image_detections.sql  fct_messages.sql  schema.yml
telegram_analytics/models/staging/: schema.yml  sources.yml  stg_image_detections.sql  stg_telegram_messages.sql
telegram_analytics/tests/: test_channel_fact_dim_consistency.sql  test_engagement_rate_calculation.sql  test_engaging_content_has_views.sql
